[gd_scene load_steps=7 format=3 uid="uid://c5ye16saujda4"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_iqy4n"]
[ext_resource type="Texture2D" uid="uid://doqrdb2sweqp5" path="res://assets/ui/bubble/up.png" id="2_tgakt"]
[ext_resource type="PackedScene" uid="uid://cxu56pe4mnno2" path="res://scenes/level.tscn" id="3_qy54l"]
[ext_resource type="Texture2D" uid="uid://043xamqehdxm" path="res://assets/ui/bubble/down.png" id="3_xx04p"]
[ext_resource type="PackedScene" uid="uid://cmmoe6evvll34" path="res://scenes/star.tscn" id="5_bdjc5"]
[ext_resource type="PackedScene" uid="uid://br46c1wtpw5q" path="res://scenes/timer.tscn" id="6_mgo7q"]

[node name="InfoPanelScn" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqy4n")
metadata/_edit_use_anchors_ = true

[node name="Up" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.326005)
texture = ExtResource("2_tgakt")
centered = false

[node name="Down" type="Sprite2D" parent="."]
position = Vector2(0, 949)
scale = Vector2(0.375, 0.326005)
texture = ExtResource("3_xx04p")
centered = false

[node name="LevelScn" parent="." instance=ExtResource("3_qy54l")]
layout_mode = 1
anchor_left = 0.350694
anchor_top = 0.210938
anchor_right = 0.640625
anchor_bottom = 0.945312

[node name="StarScn1" parent="." instance=ExtResource("5_bdjc5")]
z_index = 1
position = Vector2(257, 37)

[node name="StarScn2" parent="." instance=ExtResource("5_bdjc5")]
z_index = 2
position = Vector2(286, 27)

[node name="StarScn3" parent="." instance=ExtResource("5_bdjc5")]
position = Vector2(316, 36)

[node name="TimerScn" parent="." instance=ExtResource("6_mgo7q")]
layout_mode = 1
anchor_left = 0.0607639
anchor_top = 0.0859375
anchor_right = 0.338542
anchor_bottom = 0.398438
